tests/baselines/reference/letConstMatchingParameterNames(strict=true).errors.txt
letConstMatchingParameterNames.ts(3,18): error TS7010: 'use', which lacks return-type annotation, implicitly has an 'any' return type.


==== letConstMatchingParameterNames.ts (1 errors) ====
    let parent = true;
    const parent2 = true;
    declare function use(a: any);
                     ~~~
!!! error TS7010: 'use', which lacks return-type annotation, implicitly has an 'any' return type.
    
    function a() {
        
        let parent = 1;
        const parent2 = 2;
    
        function b(parent: string, parent2: number) {
            use(parent);
            use(parent2);
        }
    }
    